--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
     "name": "laravel/laravel",
     "config": {
-        "platform": {
-            "php": "5.6"
-        }
+        "preferred-install": "dist"
     },
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -21,10 +22,11 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "mockery/mockery": "~1.3.0",
+        "openbuildings/phpunit-spiderling": "0.1.13"
     },
     "autoload": {
         "classmap": [
@@ -54,8 +56,5 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
-    },
-    "config": {
-        "preferred-install": "dist"
     }
 }
