--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,10 @@
         ],
         "psr-4": {
             "fuma\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helper/helpers.php"
+        ]
     },
     "autoload-dev": {
         "classmap": [
