--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "chumper/zipper": "^0.6.1",
         "guzzlehttp/guzzle": "^6.2",
         "predis/predis": "^1.1",
-        "rairlie/laravel-locking-session": "^1.1"
+        "rairlie/laravel-locking-session": "^1.1",
+        "doctrine/dbal": "2.5.13"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
