--- a/.env.example
+++ b/.env.example
@@ -2,35 +2,38 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://fuma.new.test
+APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # Custom locations
-APP_SUBDIR=
-
-#This is the name of the directory where the jobs are stored
-APP_JOBDIR=fuma
-
-APP_DOWNLOADS=downloads
-APP_DEVEMAIL=
-
+################# touch these #################
 # Tell the containers where to find the reference data on host
-REF_DATA_ON_HOST=/mnt/e/ #modify this if needed
+REF_DATA_ON_HOST=/fuma_data/reference_data/ # It should be exaclty the same as laraDock-fuma/.env var:FUMA_REF_DATA_PATH_ON_HOST
 
 # Tell the containers where to find the jobs directory on host 
-ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST=/fuma-jobs # In custom location would look like this
+ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST=/fuma_data/users_data # In custom location would look like this, should be exaclty the same as laraDock-fuma/.env var:FUMA_JOBS_PATH_HOST
 # ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST=/home/tasos51/WSL-local/FUMA-webapp-new/storage/app/fuma # In storage would look like this
+###############################################
+
+################# Don't touch these #################
+APP_SUBDIR=
+
+#This is the name of the symlink under storage/app where the jobs are stored
+APP_JOBDIR=fuma
+
+#This is the name of the directory under REF_DATA_ON_HOST where files to be downloaded are stored
+APP_DOWNLOADS=downloads
+APP_DEVEMAIL=
 
 ABS_PATH_TO_JOBS_ON_HOST=${ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST}/jobs
 ABS_PATH_TO_CELL_JOBS_ON_HOST=${ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST}/celltype
 ABS_PATH_TO_G2F_JOBS_ON_HOST=${ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST}/gene2func
-
+#####################################################
 
 DB_CONNECTION=mysql
 DB_HOST=laradock-fuma-mysql-1
-# DB_HOST=fuma-webapp-new-mysql-1
 DB_PORT=3306
 DB_DATABASE=fuma_new
 DB_USERNAME=root
