--- a/scripts/Dockerfile-g2f-r
+++ b/scripts/Dockerfile-g2f-r
@@ -1,15 +1,15 @@
-FROM python:2
+FROM r-base:4.2.3
 
-# Set default work directory
 WORKDIR /app
 
-COPY g2f/requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc'))"
 
 COPY app.config ./
-COPY g2f_DEGPlot.py ./
-COPY g2f_expPlot.py ./
-COPY GeneSet.py ./
+COPY ConfigParser.R ./
+COPY gene2func.R ./
 
 # Configure non-root user.
 ARG USERNAME
