--- a/database/old_db_migration_to_mysql/Dockerfile-jobs_transfer
+++ b/database/old_db_migration_to_mysql/Dockerfile-jobs_transfer
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY Docker/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-RUN apt update && apt install -y --no-install-recommends mysql-client \
+RUN apt update && apt install -y --no-install-recommends default-mysql-client \
     && rm -rf /var/lib/apt/lists/*
 
 COPY transfer_dirs.py ./
