Move scripts into their dirs based on the image they belong to.
All scripts have been moved into their directories based on the image that each script gets copied to.
Docker files have been moved as well.
Paths in the dockerfiles have been modified accordingly.

All these things allow us to treat each group of scripts as separate sub-projects and be accompanied by tests, fake input and output files, documentation, docker images, and the like.

Some unused scripts are now located in the scripts/unused_scripts and are considered legacy code.

--- a/scripts/allsnps/Dockerfile-allsnps
+++ b/scripts/allsnps/Dockerfile-allsnps
@@ -1,23 +1,13 @@
-FROM python:2
+FROM python:3
 
 WORKDIR /app
 
-COPY getld/requirements.txt ./
+COPY allsnps/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-
-ARG ANNOVAR_DOWNLOAD_LINK
-
-RUN apt-get update && apt-get install -y --no-install-recommends gzip curl \
-    && curl ${ANNOVAR_DOWNLOAD_LINK} -o annovar.latest.tar.gz \
-    && tar -xf annovar.latest.tar.gz -C /usr/local/share \
-    && rm annovar.latest.tar.gz \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y tabix && rm -rf /var/lib/apt/lists/*
 
 COPY app.config ./
-COPY getLD.py ./
-COPY annovar.py ./
-COPY annov_geneSNPs.pl ./
-COPY getTopSNPs.py ./
+COPY allsnps/allSNPs.py ./
 
 # Configure non-root user.
 ARG USERNAME
