--- a/scripts/create_circos_plot/Dockerfile-create_circos_plot
+++ b/scripts/create_circos_plot/Dockerfile-create_circos_plot
@@ -2,12 +2,21 @@ FROM python:3
 
 WORKDIR /app
 
-COPY allsnps/requirements.txt ./
+COPY create_circos_plot/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-RUN apt-get update && apt-get install -y tabix && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install -y --no-install-recommends curl cpanminus libgd-dev\
+    && curl http://circos.ca/distribution/circos-0.69-9.tgz -o circos-0.69-9.tgz\
+    && tar -xf circos-0.69-9.tgz -C /usr/local/share \
+    && rm circos-0.69-9.tgz \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY create_circos_plot/cpanfile ./
+RUN cpanm --installdeps .
 
 COPY app.config ./
-COPY allSNPs.py ./
+COPY create_circos_plot/createCircosPlot.py ./
+COPY create_circos_plot/config/circos ./config/circos
 
 # Configure non-root user.
 ARG USERNAME
