--- a/scripts/geteqtl/Dockerfile-geteqtl
+++ b/scripts/geteqtl/Dockerfile-geteqtl
@@ -1,15 +1,19 @@
-FROM r-base:4.2.3
+FROM python:2
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/*
+COPY geteqtl/requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc'))"
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential r-base \
+    && rm -rf /var/lib/apt/lists/*
+    
+
+RUN Rscript -e "install.packages('data.table')"
 
 COPY app.config ./
-COPY ConfigParser.R ./
-COPY gene2func.R ./
+COPY geteqtl/geteQTL.py/ ./
+COPY geteqtl/align_eqtl.R/ ./
 
 # Configure non-root user.
 ARG USERNAME
