--- a/scripts/snpannot/Dockerfile-snpannot
+++ b/scripts/snpannot/Dockerfile-snpannot
@@ -2,18 +2,15 @@ FROM r-base:4.2.3
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends curl unzip build-essential r-base \
-    && curl https://ctg.cncr.nl/software/MAGMA/prog/magma_v1.10_static.zip -o magma_v1.10_static.zip\
-    && unzip magma_v1.10_static.zip -d /usr/local/share/MAGMA \
-    && chmod +x /usr/local/share/MAGMA/* \
-    && rm magma_v1.10_static.zip \
+RUN apt-get update && apt-get install -y --no-install-recommends libcurl4-openssl-dev \
     && rm -rf /var/lib/apt/lists/*
-    
-RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc'))"
+
+RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc', 'BiocManager'))"
+RUN Rscript -e "BiocManager::install('GenomicRanges')"
 
 COPY app.config ./
-COPY magma_celltype.R ./
 COPY ConfigParser.R ./
+COPY snpannot/SNPannot.R ./
 
 # Configure non-root user.
 ARG USERNAME
