--insecure is needed because the SSL certificate is not valid
TODO: fix this, --insecure is not a good practice

--- a/scripts/create_circos_plot/Dockerfile-create_circos_plot
+++ b/scripts/create_circos_plot/Dockerfile-create_circos_plot
@@ -6,7 +6,8 @@ COPY create_circos_plot/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN apt-get update && apt-get install -y --no-install-recommends curl cpanminus libgd-dev\
-    && curl http://circos.ca/distribution/circos-0.69-9.tgz -o circos-0.69-9.tgz\
+    # --insecure is needed because the SSL certificate is not valid, TODO: fix this, --insecure is not a good practice
+    && curl --insecure https://circos.ca/distribution/circos-0.69-9.tgz -o circos-0.69-9.tgz\
     && tar -xf circos-0.69-9.tgz -C /usr/local/share \
     && rm circos-0.69-9.tgz \
     && rm -rf /var/lib/apt/lists/*
