--- a/scripts/magma/Dockerfile-magma
+++ b/scripts/magma/Dockerfile-magma
@@ -6,7 +6,7 @@ COPY magma/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN apt-get update && apt-get install -y --no-install-recommends curl unzip build-essential r-base \
-    && curl https://ctg.cncr.nl/software/MAGMA/prog/magma_v1.10_static.zip -o magma_v1.10_static.zip\
+    && curl https://vu.data.surfsara.nl/index.php/s/zkKbNeNOZAhFXZB/download -o magma_v1.10_static.zip\
     && unzip magma_v1.10_static.zip -d /usr/local/share/MAGMA \
     && chmod +x /usr/local/share/MAGMA/* \
     && rm magma_v1.10_static.zip \
