--- a/scripts/magma_celltype/Dockerfile-magma_celltype
+++ b/scripts/magma_celltype/Dockerfile-magma_celltype
@@ -3,7 +3,7 @@ FROM r-base:4.2.3
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y --no-install-recommends curl unzip build-essential r-base \
-    && curl https://ctg.cncr.nl/software/MAGMA/prog/magma_v1.10_static.zip -o magma_v1.10_static.zip\
+    && curl https://vu.data.surfsara.nl/index.php/s/zkKbNeNOZAhFXZB/download -o magma_v1.10_static.zip\
     && unzip magma_v1.10_static.zip -d /usr/local/share/MAGMA \
     && chmod +x /usr/local/share/MAGMA/* \
     && rm magma_v1.10_static.zip \
