--- a/package.json
+++ b/package.json
@@ -7,6 +7,26 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-inspect": "^0.8.6",
+        "vite-plugin-node-polyfills": "^0.22.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.6.0",
+        "bootstrap": "^3.3.7",
+        "bootstrap-select": "^1.12.0",
+        "d3": "^3.5.17",
+        "d3-queue": "^1.2.3",
+        "d3-tip": "^0.6.8",
+        "datatables.net": "^1.13.4",
+        "datatables.net-buttons": "^1.2.2",
+        "datatables.net-select": "^1.6.2",
+        "holdon.js": "^1.0.1",
+        "jquery": "^1.12.4",
+        "jquery-ui": "^1.13.2",
+        "jszip": "^2.5.0",
+        "pdfmake": "^0.1.18",
+        "sweetalert": "^1.1.3",
+        "tree-multiselect": "^2.6.3"
     }
 }
