--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0",
+        "vite": "^4.5.3",
         "vite-plugin-inspect": "^0.8.6",
         "vite-plugin-node-polyfills": "^0.22.0"
     },
@@ -18,12 +18,14 @@
         "d3": "^4.13.0",
         "d3-queue": "^1.2.3",
         "d3-tip": "^0.6.8",
-        "datatables.net": "^1.13.4",
-        "datatables.net-buttons": "^1.2.2",
-        "datatables.net-select": "^1.6.2",
+        "datatables.net-bs4": "^2.1.4",
+        "datatables.net-buttons": "^3.1.1",
+        "datatables.net-select": "^2.0.5",
+        "gasparesganga-jquery-loading-overlay": "^2.1.7",
         "holdon.js": "^1.0.1",
-        "jquery": "^3.6.3",
-        "jquery-ui": "^1.13.2",
+        "jquery": "^3.7.1",
+        "jquery-migrate": "^3.5.2",
+        "jquery-ui": "^1.14.0",
         "jszip": "^2.5.0",
         "pdfmake": "^0.1.18",
         "sweetalert": "^1.1.3",
