--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@rollup/plugin-inject": "^5.0.5",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "rollup-plugin-cleanup": "^3.2.1",
         "vite": "^4.5.3",
         "vite-plugin-inspect": "^0.8.6",
-        "vite-plugin-node-polyfills": "^0.22.0"
+        "vite-plugin-node-polyfills": "^0.22.0",
+        "vite-plugin-remove-console": "^2.2.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.6.0",
