--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "bootstrap-select": "^1.13.8",
         "d3": "^4.13.0",
         "d3-queue": "^1.2.3",
-        "d3-tip": "^0.6.8",
+        "d3-v6-tip": "^1.0.9",
         "datatables.net-bs4": "^2.1.4",
         "datatables.net-buttons": "^3.1.1",
         "datatables.net-buttons-bs4": "^3.1.2",
