--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
         "datatables.net-buttons": "^3.1.1",
         "datatables.net-buttons-bs5": "^3.2.0",
         "datatables.net-select": "^2.0.5",
-        "gasparesganga-jquery-loading-overlay": "^2.1.7",
         "holdon.js": "^1.0.1",
         "jquery": "^3.7.1",
         "jquery-migrate": "^3.5.2",
         "jquery-ui": "^1.14.0",
+        "js-loading-overlay": "^1.2.0",
         "mathjax": "^3.2.2",
         "popper.js": "^1.16.1",
         "sweetalert": "^2.1.2",
