temp save of implementing running xqtl analysis

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ APP_DEVEMAIL=
 ABS_PATH_TO_JOBS_ON_HOST=${ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST}/jobs
 ABS_PATH_TO_CELL_JOBS_ON_HOST=${ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST}/celltype
 ABS_PATH_TO_G2F_JOBS_ON_HOST=${ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST}/gene2func
+ABS_PATH_TO_XQTLS_JOBS_ON_HOST=${ABSOLUTE_PATH_TO_JOBS_DIR_ON_HOST}/xqtls
 #####################################################
 
 DB_CONNECTION=mysql
