temp save of implementing coloc

--- a/scripts/xqtls/Dockerfile-xqtls
+++ b/scripts/xqtls/Dockerfile-xqtls
@@ -1,15 +1,18 @@
-FROM r-base:4.2.3
+FROM python:3
 
+# Set default work directory
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+COPY xqtls/requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
+
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential r-base \
     && rm -rf /var/lib/apt/lists/*
 
-RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc', 'dplyr'))"
+RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc', 'R.utils'))"
 
 COPY app.config ./
-COPY ConfigParser.R ./
-COPY xqtls/test.R ./
+COPY xqtls/format_for_lava_coloc.py ./
 
 # Configure non-root user.
 ARG USERNAME
